install on new server

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
     #access_log  logs/access.log  main;
 
     lua_shared_dict TestApp 10m;
-    lua_package_path "/Users/htl/quick-x-server/src/?.lua;;";
+    lua_package_path "/opt/quick_server/src/?.lua;;";
 
     sendfile        on;
     #tcp_nopush     on;
@@ -37,7 +37,7 @@ http {
 
     server {
         #listen       80;
-        listen       8088 so_keepalive=on;
+        listen       8086 so_keepalive=on;
         server_name  localhost;
 
         #charset koi8-r;
@@ -45,11 +45,11 @@ http {
         #access_log  logs/host.access.log  main;
 
         location /test {
-            root /Users/htl/quick-x-server/src/server;
+            root /opt/quick_server/src/server;
             lua_code_cache off;
             lua_socket_log_errors off;
             lua_check_client_abort on;
-            content_by_lua_file /Users/htl/quick-x-server/src/server/MyTestWebsocketServer.lua;
+            content_by_lua_file /opt/quick_server/src/server/bootstrap.lua;
         }
 
         location / {
